#ifndef LOGISTIC_ENTITY_HPP_
#define LOGISTIC_ENTITY_HPP_

#include "product/product_database.hpp"

class LogisticEntity {
private:
    ProductDatabase m_products;
public:
    
};

#endif
